# react-native-appstack-sdk

./: .eslintrc.js  .gitignore  ANDROID_INTEGRATION.md  BUILD.md  CHANGELOG.md  INTEGRATION_SUMMARY.md  IntegrationTest.js  LICENSE  README.md  USAGE.md  USAGE_EXAMPLE.md  build.sh  index.d.ts  jest.config.js  package-lock.json  package.json  react-native-appstack-sdk.podspec  react-native.config.js  tsconfig.build.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build.yml  integration-tests.yml  tests.yml
__tests__/: AppstackSDK.test.ts
android/: CMakeLists.txt  README.md  build.gradle  build.gradle.kts  gradle.properties  local.properties  proguard-rules.pro  settings.gradle.kts
android/sdk/: .env.example  build.gradle  build.gradle.kts  consumer-rules.pro
android/sdk/src/main/kotlin/com/appstack/attribution/: Api.kt  AppLifecycleObserver.kt  AppstackReactNativeModule.kt  AppstackReactNativePackage.kt  CircuitBreaker.kt  ConfigRefreshWorker.kt  Constants.kt  DebugOverlayView.kt  DebugStateProvider.kt  EventQueue.kt  EventType.kt  FlushWorker.kt  InstallationIdProvider.kt  Logger.kt  PlayStoreReferrerProvider.kt  ReferrerCache.kt  RetrofitClient.kt  SdkInfo.kt  SharedPrefsStorage.kt  ThrottleManager.kt
android/sdk/src/test/kotlin/com/appstack/integration/: AppLifecycleFlushTest.kt  NetworkFetchTest.kt  SdkEndToEndTest.kt  TestBackend.kt  TestSdkHelper.kt
android/sdk/src/test/kotlin/com/appstack/unit/: CircuitBreakerTest.kt  DebugStateProviderTest.kt  EventQueueTest.kt  InMemoryStorage.kt  InstallationIdProviderTest.kt  SharedPrefsStorageTest.kt  SimpleConfigTest.kt  ThrottleManagerTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: AppstackReactNative.cpp
android/src/main/jni/: AppstackReactNativeSpec.cpp  AppstackReactNativeSpec.h  CMakeLists.txt
android/src/main/kotlin/com/appstack/attribution/: AppstackReactNativeModule.kt  AppstackReactNativePackage.kt
android/src/main/kotlin/com/appstack/reactnative/: AppstackReactNativeModule.kt  AppstackReactNativePackage.kt
homepage-app/: .env.example  .gitignore  README.md  app.json  eas.json  metro.config.js  package-lock.json  package.json
homepage-app/android/: build.gradle  settings.gradle
homepage-app/android/app/: build.gradle
homepage-app/android/app/src/main/: AndroidManifest.xml
homepage-app/app/(tabs)/: index.tsx
homepage-app/ios/: Podfile
homepage-app/ios/homepageapp/: Info.plist
homepage-app/ios/homepageapp.xcodeproj/: project.pbxproj
homepage-app/ios/homepageapp.xcodeproj/xcshareddata/xcschemes/: homepageapp.xcscheme
homepage-app/ios/homepageapp.xcworkspace/: contents.xcworkspacedata
homepage-app/plugins/: withAppstackDevProxy.js
integration-tests/: AndroidManifest.runtime.xml  mock_server.py  network_security_config.xml  run.sh  validate_runtime.py
ios/: AppstackBridge.h  AppstackBridge.swift  AppstackReactNative.h  AppstackReactNative.m  AppstackReactNative.mm  Info.plist
ios/AppstackSDK.xcframework/: Info.plist
ios/AppstackSDK.xcframework/ios-arm64/AppstackSDK.framework/: AppstackSDK  Info.plist
ios/AppstackSDK.xcframework/ios-arm64/AppstackSDK.framework/Headers/: AppstackSDK-Swift.h
ios/AppstackSDK.xcframework/ios-arm64/AppstackSDK.framework/Modules/: module.modulemap
ios/AppstackSDK.xcframework/ios-arm64_x86_64-maccatalyst/AppstackSDK.framework/: AppstackSDK
ios/AppstackSDK.xcframework/ios-arm64_x86_64-simulator/AppstackSDK.framework/: AppstackSDK  Info.plist
ios/AppstackSDK.xcframework/ios-arm64_x86_64-simulator/AppstackSDK.framework/_CodeSignature/: CodeResources
ios/ios-arm64/AppstackSDK.framework/: AppstackSDK  Info.plist
ios/ios-arm64/AppstackSDK.framework/Modules/AppstackSDK.swiftmodule/: arm64-apple-ios.abi.json  arm64-apple-ios.private.swiftinterface  arm64-apple-ios.swiftdoc  arm64-apple-ios.swiftinterface
ios/ios-arm64_x86_64-simulator/AppstackSDK.framework/: AppstackSDK  Info.plist
ios/ios-arm64_x86_64-simulator/AppstackSDK.framework/Headers/: AppstackSDK-Swift.h  AppstackSDK.h
ios/ios-arm64_x86_64-simulator/AppstackSDK.framework/Modules/AppstackSDK.swiftmodule/: arm64-apple-ios-simulator.abi.json  arm64-apple-ios-simulator.private.swiftinterface  arm64-apple-ios-simulator.swiftdoc  arm64-apple-ios-simulator.swiftinterface  x86_64-apple-ios-simulator.abi.json  x86_64-apple-ios-simulator.private.swiftinterface  x86_64-apple-ios-simulator.swiftdoc  x86_64-apple-ios-simulator.swiftinterface
ios/ios-arm64_x86_64-simulator/AppstackSDK.framework/_CodeSignature/: CodeResources
plugin/: package-lock.json  package.json  tsconfig.json
plugin/src/: index.ts
src/: NativeAppstackReactNative.ts  index.ts  types.ts
(+25 files in other folders)
